﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-07-07
	Fixed: Network status logging was not ignoring duplicate reports properly.
	Changed: Attempt to make things smarter with audio device handling.
### 2020-06-29
	Fixed: DynDNS debug output was confused.
	Removed: Don't complain about watchlist rules with insufficient actions. This was done poorly.
	Removed: Don't complain about bad devices by default. Requires audio debug now. Only number of bad devices are output normally.
### 2020-06-26
	Fixed: Smart path didn't format non-filtered paths correctly due to peculiarity of System.IO.Path.Combine.
	Fixed: DNS update failed if it was not previously reported.
### 2020-06-12
	Fixed: Volume adjustments now properly format path as per watchlist rules in all circumstances.
	Fixed: Error when manual control is used in power manager.
### 2020-06-07
	Added: Save debug settings option to the UI so it saves the current debug state.
### 2020-06-05
	Changed: Several internal changes to IPC, modules, number formatting, and others. These should have no notable end-user impact.
	Fixed: Window re-opening was broken by above change.
### 2020-05-29
	Fixed: Smart path was not working correctly.
### 2020-05-24
	Removed: Ideal affinity experiment. Deemed to have no notable impact.
	Removed: Exclusive mode removed. Game mode on Windows 10 does it already.
	Removed: Window resize&reposition feature. Deemed unnecessary for most users and too likely to break things if made into proper feature.
### 2020-04-29
	Fixed: Audio manager under some conditions fails to hook to default devices.
### 2020-04-28
	Fixed: Path visibility option was ignored. It should now properly be generated, cached, and displayed.
	Changed: Various small improvements to log output.
### 2020-04-26
	Changed: Volume changes now show the matching rule and process name as normal.