@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-07-08
+	Changed: Reduce some debug output.
 ### 2020-07-07
 	Fixed: Network status logging was not ignoring duplicate reports properly.
 	Changed: Attempt to make things smarter with audio device handling.
